--- a/modules/puppet/files/Rakefile
+++ b/modules/puppet/files/Rakefile
@@ -4,5 +4,5 @@ desc "Run Puppet on ENV['CLIENT']"
 task :apply do
     client = ENV['CLIENT']
     sh "git push"
-    sh "#{SSH}  #{CLIENT}  pull-updates"
+    sh "#{SSH}  #{client}  pull-updates"
 end
